working before changes

--- a/src/template.html
+++ b/src/template.html
@@ -46,10 +46,22 @@
             </div>
         </div>
         
-        <div id = "svg_image">
-            <img src="image.svg" style="width:100%">
+        <div id = "data_images">
+            <div id = "table_bar">
+                <div id = "svg_image">
+                    <img src="image_table.svg" style="height: 800px">
+                </div>
+
+                <div id = "svg_image2">
+                    <img src="image_bar.svg" style="height: 800px">
+                </div>
+            </div>
+
+            <div id = "svg_image3">
+                <img src="image_graph.svg" style="height: 813px">
+            </div>
         </div>
-        
+
         <div id = "bellow_image">
             <div id = "legend_info_name">
             <div id = "legend_info">
