--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
             <div id="text_and_date"> 
                 <div class = "big_small_text">
                     <div class = "bigger_text">
-                        OpenInterest und HedgeBedarf
+                        $TITLE$
                     </div>
                     <div class = "smaller_text">
                         basierend auf Daten von der EUREX <br>
