--- a/src/template.html
+++ b/src/template.html
@@ -95,6 +95,7 @@
 					</div>
 				</div>
 			</div>
+			$BEGIN_DETAIL$
 			<div class = "header">
 				<div class ="text_and_date">
 				    <div class = "big_small_text">
@@ -168,6 +169,7 @@
 					</div>
 				</div>
 			</div>
+			$END_DETAIL$
 			<div id = "preise">
 				<b>Preise</b>  <br><br><br>
 				<div  style="color: blue">Options-Analysen:</div> 
